--- a/assets/pubs.bib
+++ b/assets/pubs.bib
@@ -1,10 +1,10 @@
-@article{gonzalez2014feasibility,
-  title={A feasibility test for linear interference alignment in {MIMO} channels with constant coefficients},
-  author={Gonz{\'a}lez, {\'O}scar and Beltr{\'a}n, Carlos and Santamar{\'\i}a, Ignacio},
-  journal={IEEE Trans. Inf. Theory},
-  volume={60},
-  number={3},
-  pages={1840--1856},
-  year={2014},
-  publisher={IEEE}
+@article{smith2023advances,
+  author = {Smith, John and Johnson, Emily},
+  title = {Recent Advances in Machine Learning},
+  journal = {Journal of Artificial Intelligence},
+  year = {2023},
+  volume = {15},
+  number = {2},
+  pages = {123--145},
+  doi = {10.1234/jai.2023.1234}
 }
